infra/kubernetes/services/source/source-deployment.yaml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: source
  labels:
    app: source
spec:
  replicas: 1
  selector:
    matchLabels:
      app: source
      task: source
  template:
    metadata:
      labels:
        app: source
        task: source
        version: v0.0.1
    spec:
      containers:
        - name: source
          image: danniilperestoronin/source:latest
          ports:
            - containerPort: 80801
