infra/kubernetes/services/source/source-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: source
spec:
  ports:
  - name: source-http
    targetPort: 8081
    port: 80
  selector:
    app: source
    task: source
