infra/kubernetes/services/source/source-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: source
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: news-agg.com
    http:
      paths:
      - path: /api/source
        backend:
          serviceName: source
          servicePort: source-http
